rook-ceph-cluster/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ceph-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /fog/ceph
